<resources>
    <string name="app_name">HealthCare</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="doctor_edit_profile">Edit Profile</string>
    <string name="doctor_report">Report</string>
    <string name="doctor_change_pass">Change Password</string>
    <string name="patient_edit_profile">Edit Profile</string>
    <string name="patient_dashboard">Dashboard</string>
    <string name="patient_prescription">Prescription</string>
    <string name="menu_logout">Log Out</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="prescription">Prescription</string>
    <string name="report">Report</string>
    <string name="edit_profile_doctor">Edit Profile</string>
    <string name="mess_when_click_back_btn">Press again to exit</string>
    <string name="contact_us">Contact Us</string>
    <string name="Address">Address</string>
    <string name="PatientId">Patient ID</string>
    <string name="Phone">Phone</string>
    <string name="Picture">Picture</string>
    <string name="SelectDoctor">Select Doctor</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="alert_enter_email">Enter Email</string>
    <string name="alert_enter_email_and_password">Enter Email and Password</string>
    <string name="alert_enter_password">Enter Password</string>
    <string name="alert_fail_to_login">Failed to login.Email or Password is invalid.</string>
    <string name="alert_file_not_selected">File Not Selected</string>
    <string name="all_data_providing_message">Please provide all the required data to Registration</string>
    <string name="api_key">BD@task987</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appointment">Appointment</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="blood_group">Blood Group</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="change_picture">Change Picture</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="doctorName">Doctor Name</string>
    <string name="doctors">Doctors</string>
    <string name="documents">Documents</string>
    <string name="don_t_have_an_account_create_now">"Don't have an account?"</string>
    <string name="email">Email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_employee_number">Enter Your Employee Number</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_password_address">Enter Your Password</string>
    <string name="enter_health_insurance_code">Enter Your Code</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="join_now">Register now</string>
    <string name="identity_number">Identity Number</string>
    <string name="login">Login</string>
    <string name="logout_confirmation_message">Are you sure, you want to log out?</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="mobile">Mobile</string>
    <string name="type">Type Care</string>
    <string name="msg_no_network_available">No network is available now. Please check your internet connection.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="no_file_chooosen">No File Chooosen</string>
    <string name="registration_form">Registration Form</string>
    <string name="select_your_date_of_birth">Date of Birth</string>
    <string name="update">Update</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
</resources>