<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/doctor_nav_edit_profile"
            android:icon="@drawable/ic_menu_edit"
            android:title="@string/doctor_edit_profile" />
        <item
            android:id="@+id/doctor_nav_report"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/doctor_report" />
        <item
            android:id="@+id/doctor_nav_changepass"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/doctor_change_pass" />
        <item
            android:id="@+id/doctor_nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_logout" />
    </group>
</menu>