<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/patient_nav_dashboard">

    <fragment
        android:id="@+id/patient_nav_dashboard"
        android:name="com.example.hms.ui.patient.dashboard.DashboardFragment"
        android:label="@string/patient_dashboard"
        tools:layout="@layout/fragment_patient_dashboard" />
    <fragment
        android:id="@+id/patient_nav_edit_profile"
        android:name="com.example.hms.ui.patient.profile.ProfileFragment"
        android:label="@string/patient_edit_profile"
        tools:layout="@layout/fragment_patient_profile" />

    <fragment
        android:id="@+id/patient_nav_prescription"
        android:name="com.example.hms.ui.patient.prescription.PrescriptionFragment"
        android:label="@string/patient_prescription"
        tools:layout="@layout/fragment_doctor_report" />


</navigation>