<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10.0dip"
        android:gravity="center"
        android:text="@string/registration_form"
        android:textColor="@color/black"
        android:textSize="@dimen/Normal_Text_Size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@color/reg_back"
        android:padding="5.0dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_full_name"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70.0"
                    android:hint="@string/enter_your_full_name"
                    android:padding="5.0dip"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/identity_number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/met_identity_number"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70.0"
                    android:padding="5.0dip"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_email"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70.0"
                    android:hint="@string/enter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:padding="5.0dip"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/mobile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_mobile_number"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70.0"
                    android:hint="@string/enter_your_mobile_number"
                    android:inputType="number"
                    android:padding="5.0dip"
                    android:textColor="@color/black" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/progressBarBlue"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <Spinner
                    android:id="@+id/sp_gender"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="75.0"
                    android:padding="5.0dip"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="30"
                    android:padding="5.0dip"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_dob"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="57"
                    android:focusableInTouchMode="false"
                    android:hint="@string/select_your_date_of_birth"
                    android:padding="5.0dip"
                    android:textColor="@color/black" />

                <ImageButton
                    android:id="@+id/calendar_choose"
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:src="@drawable/ic_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="40.0"
                    android:padding="5.0dip"
                    android:text="@string/Picture"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <ImageView
                    android:id="@+id/patientImage"
                    android:layout_width="0.0dip"
                    android:layout_height="70.0dip"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="21"
                    android:background="@color/ash"
                     />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_select_pic"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30.0"
                    android:backgroundTint="#009688"
                    android:gravity="center"
                    android:hint="@string/change_picture"
                    android:textColorHint="@color/white" />

                <TextView
                    android:id="@+id/tv_pic_name"
                    android:layout_width="0.0dip"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.0"
                    android:text="@string/no_file_chooosen"
                    android:textColor="@color/black"
                    android:textSize="10.0dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5.0dip"
                android:background="@color/reg_back"
                android:orientation="horizontal"
                android:weightSum="100.0">

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5.0dip"
                    android:layout_weight="25.0"
                    android:padding="5.0dip"
                    android:text="@string/Address"
                    android:textColor="@color/black"
                    android:textSize="@dimen/Normal_Text_Size" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.0"
                    android:gravity="start"
                    android:text="*"
                    android:textAlignment="viewStart"
                    android:textColor="@color/red"
                    android:textSize="@dimen/Normal_Text_Size"
                    android:textStyle="bold" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/met_address"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="70.0"
                    android:hint="@string/enter_your_address"
                    android:padding="5.0dip"
                    android:textColor="@color/black" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10.0dip"
                android:layout_marginBottom="15.0dip"
                android:backgroundTint="#009688"
                android:gravity="center"
                android:hint="@string/update"

                android:paddingLeft="65.0dip"
                android:paddingRight="65.0dip"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>